cmake_minimum_required(VERSION 4.0)
project(Practicing_CPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(Practicing_CPP main.cpp
        Challenges/challenge_1.cpp
        Challenges/challenge_2.cpp
        Challenges/challenge_3.cpp
        Challenges/challenge_4.cpp
        Challenges/challenge_5.cpp
        Challenges/challenge_6.cpp
        Challenges/challenge_7.cpp
        Challenges/challenge_8.cpp
        Challenges/challenge_9.cpp
        Challenges/challenge_10.cpp
        Challenges/challenge_11.cpp
        Challenges/challenge_12.cpp
        Challenges/challenge_13.cpp
        Challenges/challenge_14.cpp
        Challenges/challenge_15.cpp
        Challenges/challenge_16.cpp)
